--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -1,103 +1,87 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-<title>Inicio de sesión</title>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!-- Optional theme -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-	crossorigin="anonymous">
+    <!-- link css -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
+    <!-- link icon -->
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css}" integrity="sha512-ZnR2wlLbSbr8/c9AgLg3jQPAattCUImNsae6NHYnS9KrIwRdcY9DxFotXhNAKIKbAXlRnujIqUWoXXwqyFOeIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form</title>
 </head>
-<body>
+<body>a
+    <div class="container">
+        <div class="box">
+            <div class="form sign_in">
+                <h3>Sign In</h3>
+                <span>or use your account</span>
 
+                <form th:action="@{/login}" method="post" class="form_input">
+                    <div class="type">
+                        <input type="text" placeholder="Nombre de usuario" name="username" id="username">
+                    </div>
+                    <div class="type">
+                        <input type="password" placeholder="Password" name="password" id="passwordSignIn">
+                    </div>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-					aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Registro y
-					inicio de sesión</a>
-			</div>
-		</div>
-	</nav>
+                    <div class="forgot">
+                        <span>Forgot your password?</span>
+                    </div>
 
-	<br>
-	<br>
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<h1>Inicio de sesión</h1>
-				<form th:action="@{/login}" method="post">
-<div th:if="${param.error}">
-    <div class="alert alert-danger" >
-        Usuario o contraseña invalido
-    </div>
-   
-</div>
-					<div th:if="${param.error2}">
-    <div class="alert alert-danger" >
-               Por favor, confirma tu correo electrónico para iniciar sesión.
-    </div>
-</div>
-			
-
-
-					<div th:if=${param.logout}>
-						<div class="alert alert-info">Ha cerrado sesión exitosamente
-						</div>
-					</div>
-
-
-					<div class="form-group">
-						<label  for="username">Nombre de
-							usuario : </label> <input id="username"  name="username" type="text" class="form-control"
-							required autofocus="autofocus" placeholder="Digite su email ID">
-					</div>
-
-					<div class="form-group">
-						<label  for="password">Password : </label> <input
-							id="password" type="password"  name="password" class="form-control" required
-							autofocus="autofocus" placeholder="Digite su password">
-					</div>
-
-					<div class="form-group">
-						<div class="row">
-							<div class="col-md-6 col-md-offset-3">
-								<input type="submit" class="form-control btn btn-primary" name="login-submit" id="login-submit"
-									value="Iniciar sesión" />
-							</div>
-						</div>
-					</div>
-				</form>
-				<div class="form-group">
-					<span>Si eres nuevo usuario <a th:href="@{/registro}">regístrate
-							aqui</a></span>
+                    <button class="btn bkg" type="submit">Sign In</button>
+                </form>
+            </div>
+    
+            <div class="form sign_up">
+                <h3>Sign Up</h3>
+                <span>or use your email for register</span>
+				<div th:if=${param.exito}>
+					<div class="alert alert-info">Se ha registrado exitosamente a
+						la aplicación. Revise su enlace de verificacion para continuar</div>
 				</div>
+                <form th:action="@{/registro}" method="post" class="form_input">
+                    <div class="type">
+                        <input type="text" placeholder="Name" name="nombre" id="name">
+                    </div>
+                      <div class="type">
+                        <input type="text" placeholder="Apellido" name="apellido" id="apellido">
+                    </div>
+                    <div class="type">
+                        <input type="email" placeholder="Email" name="email" id="email">
+                    </div>
+                    <div class="type">
+                        <input type="password" placeholder="Password" name="password" id="passwordSignUp">
+                    </div>
 
-			</div>
-		</div>
-	</div>
+                    <button class="btn bkg" type="submit">Sign Up</button>
+                </form>
+            </div>
+        </div>
 
+        <div class="overlay">
+            <div class="page page_signIn">
+                <h3>Welcome Back!</h3>
+                <p>To keep with us please login with your personal info</p>
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-		crossorigin="anonymous"></script>
+                <button class="btn btnSign-in">Sign Up <i class="bi bi-arrow-right"></i></button>
+            </div>
+
+            <div class="page page_signUp">
+                <h3>Hello Friend!</h3>
+                <p>Enter your personal details and start journey with us</p>
+
+                <button class="btn btnSign-up">
+                    <i class="bi bi-arrow-left"></i> Sign In</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- link script -->
+    <script th:src="@{/js/main.js}"></script>
 </body>
 </html>
 
