--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
@@ -274,7 +274,7 @@ body {
     width: 50%;
     transition: all 0.8s;
     transform: translateX(0);
-    background-color: #FF4167;
+    background-color: #0042A4;
     z-index: 1;
     overflow: hidden;
     z-index: 5;
@@ -370,5 +370,5 @@ body {
 }
 
 .bkg {
-    background-color: #FF4167;
+    background-color: #0042A4;
 }
