--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -10,73 +10,74 @@
 
     <!-- link icon -->
     <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css}" integrity="sha512-ZnR2wlLbSbr8/c9AgLg3jQPAattCUImNsae6NHYnS9KrIwRdcY9DxFotXhNAKIKbAXlRnujIqUWoXXwqyFOeIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/8ea7035c-513b-42fc-8968-4046aca4a9eb/webchat/config.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
 </head>
-<body>a
+<body>
     <div class="container">
         <div class="box">
             <div class="form sign_in">
-                <h3>Sign In</h3>
-                <span>or use your account</span>
+                <h3>Inicio de sesión</h3>
+                <span>Usa tus credenciales en la aplicacion:</span>
 
                 <form th:action="@{/login}" method="post" class="form_input">
                     <div class="type">
-                        <input type="text" placeholder="Nombre de usuario" name="username" id="username">
+                        <input type="text" placeholder="Correo electronico" name="username" id="username">
                     </div>
                     <div class="type">
-                        <input type="password" placeholder="Password" name="password" id="passwordSignIn">
+                        <input type="password" placeholder="Contraseña" name="password" id="passwordSignIn">
                     </div>
 
                     <div class="forgot">
-                        <span>Forgot your password?</span>
+                        <a>Olvidaste tu contraseña?</a>
                     </div>
 
-                    <button class="btn bkg" type="submit">Sign In</button>
+                    <button class="btn bkg" type="submit">Ingresar</button>
                 </form>
             </div>
     
             <div class="form sign_up">
-                <h3>Sign Up</h3>
-                <span>or use your email for register</span>
+                <h3>Registro</h3>
+                <span>Ingresa tu información para registrarte:</span>
 				<div th:if=${param.exito}>
 					<div class="alert alert-info">Se ha registrado exitosamente a
 						la aplicación. Revise su enlace de verificacion para continuar</div>
 				</div>
                 <form th:action="@{/registro}" method="post" class="form_input">
                     <div class="type">
-                        <input type="text" placeholder="Name" name="nombre" id="name">
+                        <input type="text" placeholder="Nombre" name="nombre" id="name">
                     </div>
                       <div class="type">
                         <input type="text" placeholder="Apellido" name="apellido" id="apellido">
                     </div>
                     <div class="type">
-                        <input type="email" placeholder="Email" name="email" id="email">
+                        <input type="email" placeholder="Correo Electrónico" name="email" id="email">
                     </div>
                     <div class="type">
-                        <input type="password" placeholder="Password" name="password" id="passwordSignUp">
+                        <input type="password" placeholder="Contraseña" name="password" id="passwordSignUp">
                     </div>
 
-                    <button class="btn bkg" type="submit">Sign Up</button>
+                    <button class="btn bkg" type="submit">Confirmar</button>
                 </form>
             </div>
         </div>
 
         <div class="overlay">
             <div class="page page_signIn">
-                <h3>Welcome Back!</h3>
-                <p>To keep with us please login with your personal info</p>
+                <h3>Bienvenido de vuetla!</h3>
+                <p>Aun no estas registrado?</p>
 
-                <button class="btn btnSign-in">Sign Up <i class="bi bi-arrow-right"></i></button>
+                <button class="btn btnSign-in">Registrate <i class="bi bi-arrow-right"></i></button>
             </div>
 
             <div class="page page_signUp">
-                <h3>Hello Friend!</h3>
-                <p>Enter your personal details and start journey with us</p>
+                <h3>Hola Amigo!</h3>
+                <p>Ya formas parte de nosotros?</p>
 
                 <button class="btn btnSign-up">
-                    <i class="bi bi-arrow-left"></i> Sign In</button>
+                    <i class="bi bi-arrow-left"></i> Ingreso</button>
             </div>
         </div>
     </div>
