--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="layout/layout :: head"></head>
+<head th:replace="layout :: head"></head>
 <body>
 	
 	 <h4>
