--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
@@ -1,97 +1,161 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="pasajero/layout :: head">
-	
+
 </head>
 
 <body>
-<link rel="stylesheet" th:href="@{/css/pasajero/home.css}" />
+	<link rel="stylesheet" th:href="@{/css/pasajero/home.css}" />
 
 	<header th:replace="pasajero/layout :: header"></header>
 
 
 
 
-      <!-- Jumbotron Header -->
-
-	    <h4 class="titulo">
+	<!-- Jumbotron Header -->
+	<div class="nombre">
+		<h4 class="titulo">
 			Bienvenido <span th:text="${pasajero}"></span>
+			<p class="descrip">
+				Aqui podrás reservas tus asientos
+			</p>
 		</h4>
-		
-		
-		
-		
-      <!-- Page Features -->
-      <div class="row text-center">
-  <h1>Reservar boletos:</h1>
-     <h1>Unidades disponibles:</h1>
+	</div>
+	<div class="busqueda">
 
-<form id="detalleForm" action="/boleto/form" method="POST" style="display: none;">
-    <input type="hidden" name="unidadId" id="unidadId">
-    <input type="hidden" name="cronogramaId" id="cronogramaId">
-    <input type="hidden" name="horaSalida" id="horaSalida">
-    <input type="hidden" name="costo" id="costo">
-</form>
+		<h4>
+			Escoge tu destino:
+		</h4>
 
-<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
-				<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
-    <input class="form-control mr-sm-2" type="date" name="fecha" id="fecha" placeholder="Seleccionar fecha">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-</form>
-				
 
-   <div class="row text-center" th:if="${#lists.isEmpty(resultados)}">
-    <p>No se encontraron resultados.</p>
-</div>
-
-<div class="row text-center" th:if="${not #lists.isEmpty(resultados)}">
-    <div class="col-lg-3 col-md-6 mb-4" th:each="resultado: ${resultados}">
-        <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-                <p class="card-text">
-                    Origen: <span th:text="${resultado[5]}"></span>
-                </p>
-                <p class="card-text">
-                    Destino: <span th:text="${resultado[6]}"></span>
-                </p>
-                <p class="card-text">Unidad: <span th:text="${resultado[1]}"></span></p>
-                <p class="card-text">Cooperativa: <span th:text="${resultado[2]}"></span></p>
-                <!-- Detalles del cronograma de la unidad -->
-                
-                
-                        <span th:text="'Fecha: ' +  ${resultado[3]}"></span>
-                        <span th:text="'Hora: ' + ${resultado[4]}"></span>
-                  
+		<div class="inputt">
+			<div class="row">
+				<div class="col-md-6 mb-3">
+					<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
+						<label for="fecha" class="form-label">Búsqueda por fecha y ruta:</label>
+						<div class="input-group">
+							<input class="form-control" type="date" name="fecha" id="fecha"
+								placeholder="Seleccionar fecha">
+							<button class="btn btn-primary" type="submit">Buscar</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
+		<h2 class="viaj">Viajes Proximos:</h2>
+		<p id="fecha-actual"></p>
         
+		<div class="row text-center" th:if="${#lists.isEmpty(resultados)}">
+			<p>No se encontraron resultados.</p>
+		</div>
+
+		<div id="tarjeta" class="row text-center mb-3" th:if="${not #lists.isEmpty(resultados)}">
+    <div class="card" style="max-width: 450px;" th:each="resultado: ${resultados}">
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+            <div class="col-md-4">
+                <img th:src="@{/images/logo.png}" class="img-fluid rounded-start" alt="...">
+                <p class="card-text"><small class="text-muted" th:text="'Unidad: '+ ${resultado[2]} +' ' + ${resultado[1]}"></small></p>
             </div>
-            <div class="card-footer">
-                <a class="btn btn-secondary btn-xs"
-								th:href="@{/asientos/}+ ${resultado[7]}">Ver asientos</a>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${resultado[5]}+' - '+${resultado[6]}"></h5>
+                    <p class="card-text"><small class="text-muted" th:text="'Hora de salida: ' + ${resultado[4]}"></small></p>
+                    <a class="btn btn-primary" th:href="@{/asientos/}+ ${resultado[7]}">Reservar</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
-</div>
-</div>
+
+	</div>
+	
+	<div class="info">
+
+		<h4 class="viaj">
+			¿Que beneficios te da BookMyDrive?
+		</h4>
+		
+		<div id="tarjeta2" class="row text-center mb-3" >
+    <div class="card" style="max-width: 450px;" >
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+         
+            <div class="col-md-4">
+                <img th:src="@{/images/pasajero/img1.png}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" > Descuentos especiales</h5>
+                    <p class="card-text"><small class="text-muted" >Se aplican descuentos para personas de tercera edad en cada boleto que se compre</small></p>
+       
+                </div>
+            </div>
+        </div>
+    </div>
+      <div class="card" style="max-width: 450px;" >
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+         
+            <div class="col-md-4">
+                <img th:src="@{/images/pasajero/img2.png}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" > Cancelación gratis</h5>
+                    <p class="card-text"><small class="text-muted" >
+Al cancelar no se aplica valores recaudos o extras si se lo realiza dentro del periodo de tiempo establecido, pero se le penaliza dentro de la aplicación</small></p>
+       
+                </div>
+            </div>
+        </div>
+    </div>
+      <div class="card" style="max-width: 450px;" >
+        <div class="row g-0 mb-2"> <!-- Aplicar el margen inferior aquí -->
+         
+            <div class="col-md-4">
+                <img th:src="@{/images/pasajero/img3.png}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title" > Servicio puntual</h5>
+                    <p class="card-text"><small class="text-muted" >Los horarios y rutas se establecen segun los administradores de la aplicación</small></p>
+       
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
+	</div>
+	
+	
+	<div class="consejo">
 
+		<h4 class="viaj">
+			Consejos de viaje
+		</h4>
+		<div id="tarjeta3" class="row text-center mb-3" >
+		<div class="card" style="max-width: 650px;" >
+        <div class="row g-0 mb-2"> 
+		<img th:src="@{/images/pasajero/img4.jpg}" height="350px" >
+		<h5 class="card-title" > No olvides tu equipaje</h5>
+		<p class="card-text"><small class="text-muted" >Recuerda que el personal ni la aplicación se responsabiliza por objetos perdidos dentro de cada viaje, asegurate de administrar tu equipaje en cada viaje</small></p>
+        </div>
+		</div>
+		<div class="card" style="max-width: 650px;" >
+        <div class="row g-0 mb-2"> 
+		<img th:src="@{/images/pasajero/img5.jpg}" height="350px" >
+		<h5 class="card-title" > Permanece atento a la hora</h5>
+		<p class="card-text"><small class="text-muted" >Si pierdes la reservación realizada , la aplicación no puede reembolsar el boleto vendido una vez efectuado el pago</small></p>
+        </div>
+		</div>
+		</div>
+	</div>
+	<!-- Footer -->
+	<footer th:replace="pasajero/layout :: footer"></footer>
 
+	<script th:src="@{/js/pasajero/home.js}"></script>
+</body>
 
-        
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-    <!-- Footer -->
- <footer th:replace="pasajero/layout :: footer"></footer>
-    
-
-  </body>
-
-  </html>
+</html>
