--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
@@ -1,45 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<meta charset="UTF-8" />
-<title>Tus boletos</title>
-<link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}" />
-<link rel="stylesheet" th:href="@{/css/style.css}">
+<head th:replace="pasajero/layout :: head">
+
+</head>
 <body>
-		<header th:fragment="header">
+		<header th:replace="pasajero/layout :: header"></header>
 
-		<nav class="navbar navbar-expand-lg bg-body-tertiary"
-			data-bs-theme="dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" th:href="${'/'}">Buses</a>
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link"
-							th:href="${'/pasajero/boleto'}">Mis boletos</a></li>
-						<li class="nav-item"><a class="nav-link"
-							href="/logout">Cerrar sesión</a></li>
-				
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<div class="alert alert-success" th:if="${success != null}"
-			th:text=${success}></div>
-		<div class="alert alert-danger" th:if="${error != null}"
-			th:text=${error}></div>
-		<div class="alert alert-warning" th:if="${warning != null}"
-			th:text=${warning}></div>
-		<div class="alert alert-info" th:if="${info != null}" th:text=${info}></div>
-		
-		
-	</header>
 
+		
 	<div class="container py-4">
 		<div class="card bg-light">
 			<div class="card-body">
@@ -79,7 +48,7 @@
 		</div>
 	</div>
 
-	<footer th:replace="layout/layout :: footer"></footer>
+	<footer th:replace="pasajero/layout :: footer"></footer>
 
 </body>
 </html>
