--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listar_asientos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listar_asientos.html
@@ -1,61 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<style>
-        .disponible {
-            width: 20px;
-            height: 20px;
-            background-color: gray;
-            display: inline-block;
-            margin-right: 10px;
-        }
-        .ocupado {
-            width: 20px;
-            height: 20px;
-            background-color: red;
-            display: inline-block;
-            margin-right: 10px;
-        }
-    </style>
+<head th:replace="pasajero/layout :: head">
+
 </head>
 
 <body>
-	<header th:fragment="header">
-
-		<nav class="navbar navbar-expand-lg bg-body-tertiary"
-			data-bs-theme="dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" th:href="${'/'}">Buses</a>
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					
-				</div>
-			</div>
-		</nav>
-		<div class="alert alert-success" th:if="${success != null}"
-			th:text=${success}></div>
-		<div class="alert alert-danger" th:if="${error != null}"
-			th:text=${error}></div>
-		<div class="alert alert-warning" th:if="${warning != null}"
-			th:text=${warning}></div>
-		<div class="alert alert-info" th:if="${info != null}" th:text=${info}></div>
-		
-		
-	</header>
-
+	<link rel="stylesheet" th:href="@{/css/pasajero/listar_asientos.css}" />
+	<header th:replace="pasajero/layout :: header"></header>
 	
 	
 		
-
-	<h1>Asientos de la unidad:</h1>
+    <div class="uni">
+	<h1>Escoge tus asientos:</h1>
 
 
 	<div class="card h-100" th:each="dato: ${datos}">
@@ -79,8 +36,8 @@
 				Destino: <span th:text="${dato[5]}"></span>
 			</p>
 		</div>
-
-
+     </div>
+</div>
 <div class="card-header" th:text="${titulo}"></div>
 
 		<center><h1>Disponibles: <div class="disponible"></div> Ocupados: <div class="ocupado"></div></h1></center>
@@ -90,7 +47,7 @@
                     <h1>Seleccione asientos</h1>
                 </div>
             </div>
-        </div>
+   
       
         <div class="container py-4">
         <div class="row">
@@ -248,7 +205,10 @@
                                 </form>
                                 </div>
                                 </center>
-<footer th:replace="layout/layout :: footer"></footer>
+                                </center>
+        </div>
+        </div>
+<footer th:replace="pasajero/layout :: footer"></footer>
 
 
 </body>
