--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listar_asientos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listar_asientos.html
@@ -15,8 +15,8 @@
 	<h1>Escoge tus asientos:</h1>
 
 
-	<div class="card h-100" th:each="dato: ${datos}">
-		<div class="card-body">
+	<div class="card h-100 " th:each="dato: ${datos}">
+		<div class="card-body ">
 			<p class="card-text">
 				Unidad: <span th:text="${dato[0]}"></span>
 			</p>
@@ -35,36 +35,40 @@
 			<p class="card-text">
 				Destino: <span th:text="${dato[5]}"></span>
 			</p>
+			
 		</div>
+		<i class="fa fa-bus " aria-hidden="true" style="font-size: 5em;"></i>
+		 
      </div>
+    
 </div>
 <div class="card-header" th:text="${titulo}"></div>
 
-		<center><h1>Disponibles: <div class="disponible"></div> Ocupados: <div class="ocupado"></div></h1></center>
-	
-            <div class="row">
-                <div class="col">
-                    <h1>Seleccione asientos</h1>
-                </div>
-            </div>
-   
-      
+<div class="asient">
+    <div class="card h-100 text-center">
+        <div class="card-body d-flex justify-content-center align-items-center flex-column">
+            <p>Asientos Disponibles: <span class="disponible"></span></p>
+            <p>Asientos Ocupados: <span class="ocupado"></span></p>
+        </div>
+    </div>
+</div>
+<div class="asient2">
         <div class="container py-4">
         <div class="row">
             <div class="col-md-3">
                 <div class="card bg-light">
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table ">
 								<thead>
 									<tr>
-										<th>Numero-Asiento</th>
-										<th>Seleccionar</th>
+										<th>Ventana</th>
+										<th></th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="asiento: ${asientos}">
 										<td th:text="${asiento.fila + asiento.columna}"
-											th:style="'background-color: ' + (${asiento.estado != null && asiento.estado == 'Ocupado' ? 'red' : 'gray'})">
+											th:style="'background-color: ' + (${asiento.estado != null && asiento.estado == 'Ocupado' ? 'red' : '#e6f6f7'})">
 										</td>
 										<td>
 											<form th:action="@{'/asiento/' + ${asiento.id} + '/actualizarEstado'}" method="post">
@@ -87,17 +91,17 @@
             <div class="col-md-3">
                 <div class="card bg-light">
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table ">
 								<thead>
 									<tr>
-										<th>Numero-Asiento</th>
-										<th>Seleccionar</th>
+										<th>Pasillo</th>
+										<th></th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="asiento2: ${asientos2}">
 										<td th:text="${asiento2.fila + asiento2.columna}"
-											th:style="'background-color: ' + (${asiento2.estado != null && asiento2.estado == 'Ocupado' ? 'red' : 'gray'})">
+											th:style="'background-color: ' + (${asiento2.estado != null && asiento2.estado == 'Ocupado' ? 'red' : '#e6f6f7'})">
 										</td>
 										<td>
 											<form th:action="@{'/asiento/' + ${asiento2.id} + '/actualizarEstado'}" method="post">
@@ -120,17 +124,17 @@
             <div class="col-md-3">
                 <div class="card bg-light">
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table ">
 								<thead>
 									<tr>
-										<th>Numero-Asiento</th>
-										<th>Seleccionar</th>
+										<th>Pasillo</th>
+										<th></th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="asiento3: ${asientos3}">
 										<td th:text="${asiento3.fila + asiento3.columna}"
-											th:style="'background-color: ' + (${asiento3.estado != null && asiento3.estado == 'Ocupado' ? 'red' : 'gray'})">
+											th:style="'background-color: ' + (${asiento3.estado != null && asiento3.estado == 'Ocupado' ? 'red' : '#e6f6f7'})">
 										</td>
 										<td>
 											<form th:action="@{'/asiento/' + ${asiento3.id} + '/actualizarEstado'}" method="post">
@@ -153,17 +157,17 @@
             <div class="col-md-3">
                 <div class="card bg-light">
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table ">
 								<thead>
 									<tr>
-										<th>Numero-Asiento</th>
-										<th>Seleccionar</th>
+										<th>Ventana</th>
+										<th></th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="asiento4: ${asientos4}">
 										<td th:text="${asiento4.fila + asiento4.columna}"
-											th:style="'background-color: ' + (${asiento4.estado != null && asiento4.estado == 'Ocupado' ? 'red' : 'gray'})">
+											th:style="'background-color: ' + (${asiento4.estado != null && asiento4.estado == 'Ocupado' ? 'red' : '#e6f6f7'})">
 										</td>
 										<td>
 											<form th:action="@{'/asiento/' + ${asiento4.id} + '/actualizarEstado'}" method="post">
@@ -184,7 +188,7 @@
             <div class="m-3"></div>
   <center><div  th:each="dato: ${datos}">
 	<form th:action="@{'/asientos/guardarReserva/' + ${dato[6]}}" method="post">
-                                 
+                              </div>    
                                     <button type="submit" class="btn btn-primary">
 										Realizar reserva
 									</button>
