--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="layout :: head"></head>
+<head th:replace="layout/layout :: head"></head>
 <body>
 	
 	 <h4>
-			Bienvenido <span sec:authentication="principal.username"></span>
+			Bienvenidoss <span sec:authentication="principal.username"></span>
 		</h4>
 		<h4>
-			Puede visualizar los boletos vendidos
+			Puede visualizar los boletos vendidossd
 		</h4>
 		 <div class="m-3"></div>
 	<header th:fragment="header">
