--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/layout.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/layout.html
@@ -31,7 +31,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav mr-auto"> <!-- Agregada la clase mr-auto aquí -->
 						<li class="nav-item"><a class="nav-link" th:href="${'/pasajero/boleto'}"><i class="fa fa-ticket" ></i><br>Mis Boletos</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="${'/unidad/listar'}"><i class="fa fa-suitcase" aria-hidden="true"></i><br>Mis Reservas</a></li>
+						<li class="nav-item"><a class="nav-link" th:href="${'/pasajero/reservas'}"><i class="fa fa-suitcase" aria-hidden="true"></i><br>Mis Reservas</a></li>
 						<li class="nav-item"><a class="nav-link" th:href="${'/unidad/listar'}"><i class="fas fa-user"></i><br>Mi Perfil</a></li>
 						<li class="nav-item"><a class="nav-link" href="/logout"> <i class="fas fa-sign-out-alt"></i><br>Cerrar sesión</a></li>
 					</ul>
