--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/layout.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/layout.html
@@ -47,9 +47,9 @@
 	</header>
 
 
-	<footer th:fragment="footer" class="py-5 bg-primary">
+	<footer th:fragment="footer" class="py-5" style="background-color: #37517e;">
 		<div class="container">
-			<p class="m-0 text-center text-white">2024 - Copyright &copy; BookMyDrive</p>
+			<p class="m-0 text-center text-white">Copyright &copy; BookMyDrive</p>
 		</div>
 		<script th:src="@{/bootstrap/js/jquery-3.7.1.min.js}"></script>
 		<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
