--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
@@ -44,71 +44,59 @@
 		</div>
 	</div>
 
-	<div c<div class="info">
-		<div id="tarjeta2" class="row text-center mb-3">
-			<div class="card mx-auto" style="max-width: 450px;">
-				<div class="row g-0 mb-2 d-flex justify-content-center align-items-center">
-					<!-- Aplicar el margen inferior aquí -->
-					<div class="col-md-4">
-						<img th:src="@{/images/pasajero/img1.png}" class="img-fluid rounded-start" alt="...">
-					</div>
-					<div class="col-md-8">
-						<div class="card-body">
-							<h5 class="card-title"> Costo: </h5>
-							<div>Precio Unitario: <p th:text="'$'+${costo2}"></p>
-							</div>
-							<div>Subtotal (sin iva): <p th:text="'$'+${costo}"></p>
-							</div>
-							<div>Total: <p th:text="'$'+${costo3}"></p>
-							</div>
+	<div class="infor">
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="card" style="max-width: 450px; max-height: 450px; overflow: auto;">
+					<div class="card-body">
+						<h5 class="card-title">COSTO:</h5>
+						<div class="is">Precio Unitario: <p th:text="'$'+${costo2}"></p>
 						</div>
+						<div class="is">Subtotal (sin iva): <p th:text="'$'+${costo}"></p>
+						</div>
+						<div class="is">Total: <p th:text="'$'+${costo3}"></p>
+						</div>
+
 					</div>
+					<img th:src="@{/images/pasajero/img8.png}" width="150px" height="120px">
+					<br>
 				</div>
 			</div>
+			<div class="col-sm-6">
+				<div class="card" style="max-width: 450px;">
+					<div class="card-body">
+						<h5 class="card-title">MÉTODO DE RESERVA</h5>
+						<div>
+							<form th:action="@{/payment}" method="get">
 
-			<div class="card mx-auto" style="max-width: 450px;">
-				<div class="row g-0 mb-2 d-flex justify-content-center align-items-center">
-					<!-- Aplicar el margen inferior aquí -->
-					<div class="col-md-4">
-						<img th:src="@{/images/pasajero/img2.png}" class="img-fluid rounded-start" alt="...">
-					</div>
-					<div class="col-md-8">
-						<div class="card-body">
-							<h5 class="card-title"> Método de pago: </h5>
-							<!-- Botón para pagar con tarjeta -->
-							<div>
-								<form th:action="@{/payment}" method="get">
-									<button type="submit" class="btn btn-dark btn-block btn-lg">Pago en linea</button>
-								    <p>Al reservar por paypal , se cancelara el total y solo debera presentar el qr de cada boleto para ingresar a su unidad.</p>
-								</form>
-							</div>
-							<div th:each="dato: ${datos}">
-								<form id="formReserva"
-									th:action="@{'/asientos/guardarReserva/' + ${dato[6]}+'/'+${costo3}}" method="post">
-									<input type="hidden" id="idsAsientosSeleccionados"
-										name="idsAsientosSeleccionados" />
-									<button type="submit" class="btn btn-secondary" onclick="guardarAsientos()">
-										Realizar reserva (Efectivo)
-									</button>
-								<p>Al reservar en efectivo debe cancelar el valor total en ventanilla una hora antes , caso contrario se aplicará una multa.</p>
-								</form>
-							</div>
-							<div class="m-3"></div>
-							<div class="m-3"></div>
+								<button type="submit" class="btn btn-secondary" onclick="guardarAsientos()">
+									Realizar reserva (Paypal)
+								</button>
+								<p class="isa">Al reservar por paypal , se cancelara el total y solo debera presentar el
+									qr de cada
+									boleto para ingresar a su unidad.</p>
+							</form>
 						</div>
+						<div th:each="dato: ${datos}">
+							<form id="formReserva" th:action="@{'/asientos/guardarReserva/' + ${dato[6]}+'/'+${costo3}}"
+								method="post">
+								<input type="hidden" id="idsAsientosSeleccionados" name="idsAsientosSeleccionados" />
+								<button type="submit" class="btn btn-secondary" onclick="guardarAsientos()">
+									Realizar reserva (Efectivo)
+								</button>
+								<p class="isa">Al reservar en efectivo debe cancelar el valor total en ventanilla una
+									hora antes ,
+									caso contrario se aplicará una multa.</p>
+							</form>
+						</div>
+						<img th:src="@{/images/pasajero/img7.png}" width="150px" height="110px">
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
+<div class="m-3"></div>
+	<div class="m-3"></div>
 	<center>
 		<div th:each="dato: ${datos}">
 			<form th:action="@{'/asientos/cancelarReserva/' + ${dato[6]}}" method="post">
@@ -120,7 +108,7 @@
 		</div>
 	</center>
 
-	<div class="m-3"></div>
+
 	<footer th:replace="pasajero/layout :: footer"></footer>
 	<script th:src="@{/js/pasajero/listarseleccion.js}"></script>
 </body>
