--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
@@ -14,7 +14,7 @@
 			<div class="card-body">
 
 		
-				<table class="table table-striped table-bordered">
+				<table class="table table-success table-striped">
 					<thead class="thead-inverse">
 						<tr>
 							<th class="bg-dark text-white">ASIENTO</th>
@@ -22,7 +22,6 @@
 							<th class="bg-dark text-white">UNIDAD</th>
 							<th class="bg-dark text-white">FECHA</th>
 							<th class="bg-dark text-white">HORA</th>
-							<th class="bg-dark text-white">MÉTODO DE PAGO</th>
 							<th class="bg-dark text-white">VER QR</th>
 						
 						</tr>
@@ -34,7 +33,6 @@
 							<td th:text="${boleto.cronograma.unidad.numero}+ ' - ' + ${boleto.cronograma.unidad.cooperativa.nombre}"></td>
 							<td th:text="${boleto.cronograma.fecha}"></td>
 							<td th:text="${boleto.cronograma.horaSalida}"></td>
-							<td th:text="${boleto.metodoPago}"></td>
 							<td><a class="btn btn-secondary btn-xs"
 								th:href="@{/ver/boleto(id=${boleto.id})}">VER QR</a></td>
 							
