--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/pasajero/home.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/pasajero/home.css
@@ -77,6 +77,13 @@
         margin-top: 15px;
     }
     
+ .image{
+	 width: 150px;
+	 height: 100px;
+	 margin-top:5%;
+	 border-radius: 40px; /* Ajusta este valor según tus preferencias */
+    overflow: hidden;  
+ }
     #tarjeta2 .card div div p{
         text-align: justify; /* Ajusta el valor según tu preferencia para el espacio horizontal */
     }
