--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
@@ -19,7 +19,7 @@
 				<div
 					class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
 					data-aos="fade-up" data-aos-delay="200">
-					<h1>Bienvenido <span sec:authentication="principal.username"></span></h1>
+					<h1>Bienvenido <span th:text="${admin}"></span></h1>
 					<h2>Puede editar sus unidades,rutas y cronogramas de la app</h2>
 					<div class="d-flex justify-content-center justify-content-lg-start">
 						<a href="#about" class="btn-get-started scrollto">Get Started</a>
