--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout.html
@@ -6,7 +6,7 @@
 <title th:text=" 'Reservas de boletos' +${titulo}"></title>
 
 
-<link  th:href="@{https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i}" rel="stylesheet">
+<link  th:href="@{https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap}" rel="stylesheet">
 
 
   <link  th:href="@{/Administrador/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
