--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
@@ -44,7 +44,7 @@
               <td th:text="${unidad.id}"></td>
               <td th:text="${unidad.numero}"></td>
               <td th:text="${unidad.cooperativa.nombre}"></td>
-              <td th:text="${unidad.imagen}"></td>
+              <td><img th:src="@{'/uploads/' + ${unidad.imagen}}" class="image" alt="..." width="100px"></td>
               <td th:text="${unidad.estadoActividad}"></td>
               <td th:text="${unidad.cantidadAsientos}"></td>
               <td th:text="${unidad.stockBoletos}"></td>
