--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/home.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-md-6 mb-3">
 					<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
-						<label for="fecha" class="form-label">Búsqueda por fecha y ruta:</label>
+						<label for="fecha" class="form-label">Búsqueda por fecha:</label>
 						<div class="input-group">
 							<input class="form-control" type="date" name="fecha" id="fecha"
 								placeholder="Seleccionar fecha">
